fix: CardList.tsx 의 overflow속성 제거

--- a/src/app/(afterlogin)/(common_navbar)/_components/CardItem.module.scss
+++ b/src/app/(afterlogin)/(common_navbar)/_components/CardItem.module.scss
@@ -7,7 +7,6 @@
 }
 
 .thumbnail {
-  overflow: hidden;
   position: relative;
   width: 100%;
   height: 250px;
